[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/KinematicScenes/Taretler/LaserTurret/LaserTurret.gd" type="Script" id=1]
[ext_resource path="res://Resources/Sprites/UISprites/Button.png" type="Texture" id=2]
[ext_resource path="res://Resources/Sprites/Turret/Turret4Base.png" type="Texture" id=3]
[ext_resource path="res://Resources/Sprites/Turret/Turret4Top.png" type="Texture" id=4]
[ext_resource path="res://Resources/Sprites/UISprites/Window2s.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( -14.317, 2009.14, 198.469, 200.01 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 184.223, 2014.61, 192.464, 188.763 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( -19.787, 2221.47, 207.213, 189.945 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 186.252, 2214.56, 187.876, 194.303 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 171.873, 71.79 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1995, 1797, 338, 52 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1995, 1796, 338, 54 )

[node name="Turret" type="KinematicBody2D"]
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 1 )

[node name="DirectionButton" type="Node2D" parent="."]

[node name="TurnRight" type="TextureButton" parent="DirectionButton"]
margin_left = 581.954
margin_top = -76.261
margin_right = 772.954
margin_bottom = 97.739
texture_normal = SubResource( 1 )
texture_pressed = SubResource( 2 )

[node name="TurnLeft" type="TextureButton" parent="DirectionButton"]
margin_left = -1029.48
margin_top = -96.261
margin_right = -822.48
margin_bottom = 103.739
texture_normal = SubResource( 3 )
texture_pressed = SubResource( 4 )

[node name="Base" type="Sprite" parent="."]
position = Vector2( 31.1869, 125.041 )
texture = ExtResource( 3 )

[node name="Top" type="KinematicBody2D" parent="Base"]
position = Vector2( -0.604538, -102.239 )

[node name="Radar" type="RayCast2D" parent="Base/Top"]
position = Vector2( -295.635, -16.9432 )
rotation = 1.5708
scale = Vector2( 3, 1.5 )
enabled = true
cast_to = Vector2( 0, 1000 )

[node name="Position2D" type="Position2D" parent="Base/Top/Radar"]
position = Vector2( -0.705795, -2.98831 )
rotation = -1.5708
scale = Vector2( 0.666667, 0.333333 )

[node name="Sprite" type="Sprite" parent="Base/Top"]
position = Vector2( 69.3764, 49.9895 )
texture = ExtResource( 4 )
offset = Vector2( -145, -41 )

[node name="TopCollision" type="CollisionPolygon2D" parent="Base/Top"]
position = Vector2( -115.233, -50.3631 )
polygon = PoolVector2Array( -161.141, 13.1962, -123.613, 12.2012, -121.634, 2.74536, -65.7787, 2.30555, -56.3211, 9.04512, 35.2584, 6.89873, 144.009, 1.89047, 151.164, -15.2807, 232.478, -21.1279, 240.228, 29.8046, 206.491, 75.2522, 155.48, 77.1893, 43.7725, 78.4808, 18.2294, 57.4853, -150.069, 51.9491 )

[node name="BaseCollision" type="CollisionShape2D" parent="."]
position = Vector2( 32.6178, 130.458 )
shape = SubResource( 5 )

[node name="TurretHealthBack" type="TextureProgress" parent="."]
modulate = Color( 0.278431, 0.0117647, 0.0117647, 1 )
margin_left = -121.236
margin_top = -366.972
margin_right = 1926.76
margin_bottom = -304.972
rect_scale = Vector2( 0.158, 0.631 )
value = 100.0
texture_progress = SubResource( 6 )
nine_patch_stretch = true

[node name="TurretHealth" type="TextureProgress" parent="."]
modulate = Color( 0.00784314, 1, 0, 1 )
margin_left = -121.236
margin_top = -366.972
margin_right = 1926.76
margin_bottom = -304.972
rect_scale = Vector2( 0.157843, 0.630786 )
value = 100.0
texture_progress = SubResource( 7 )
tint_under = Color( 0.439216, 0, 0, 1 )
nine_patch_stretch = true
[connection signal="pressed" from="DirectionButton/TurnRight" to="." method="_on_TurnRight_pressed"]
[connection signal="pressed" from="DirectionButton/TurnLeft" to="." method="_on_TurnLeft_pressed"]
